--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "build:dev": "builder build plugin --no-minify"
   },
   "dependencies": {
-    "@backstage/release-manifests": "^0.0.11",
+    "@backstage/release-manifests": "backstage:*",
     "@yarnpkg/core": "^4.0.3",
     "@yarnpkg/fslib": "^3.0.2"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.26.3-next.0",
+    "@backstage/cli": "backstage:*",
     "@spotify/prettier-config": "^12.0.0",
     "@yarnpkg/builder": "^4.0.0",
     "prettier": "^2.0.0",
